Use docker container in CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
-name: 🏗️ Build
+name: 🏗️ Project Build
 on: push
 
 jobs:
   build:
-    name: 🏗️ Build
+    name: 🏗️ Project Build
     uses: acidicoala/SmokeAPI/.github/workflows/kb-build.yml@master
     with:
       #language=json
