--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,8 @@ jobs:
       module: '[ "SmokeAPI" ] '
 
       #language=json
-      os: '[ "Windows", "Linux" ]'
+      os: '[ "Linux" ]'
+#      os: '[ "Windows", "Linux" ]'
 
       #language=json
       bitness: '[ 32, 64 ]'
