--- a/.github/workflows/kb-build.yml
+++ b/.github/workflows/kb-build.yml
@@ -19,7 +19,7 @@ on:
 
 jobs:
   build:
-    name: ${{ inputs.os == 'Linux' && '🐧' || '🪟'}}-${{ inputs.bitness }}
+    name: 🏗️ Build
     runs-on: ${{ inputs.os == 'Linux' &&  'ubuntu-24.04' || 'windows-2025'}}
     container: ${{ inputs.os == 'Linux' && 'ghcr.io/acidicoala/koalabox:master' || '' }}
     env:
@@ -27,7 +27,7 @@ jobs:
       C_COMPILER: ${{ inputs.os == 'Linux' && 'clang' || 'cl' }}
       CXX_COMPILER: ${{ inputs.os == 'Linux' && 'clang++' || 'cl' }}
       OUTPUT_PATH: ${{ inputs.os == 'Linux' && '*.so' || 'Release/*.dll' }}
-      WIN_FLAGS: ${{ inputs.os == 'Linux' && inputs.bitness == 32 && '-A=Win32' || '' }}
+      WIN_FLAGS: ${{ inputs.os == 'Windows' && inputs.bitness == 32 && '-A=Win32' || '' }}
       LINUX_FLAGS: ${{ inputs.os == 'Linux' && inputs.bitness == 32 && '-DCMAKE_C_FLAGS=-m32 -DCMAKE_CXX_FLAGS=-m32 -DCMAKE_EXE_LINKER_FLAGS=-m32' || '' }}
     steps:
       # Fix dubious ownership errors in docker container
